services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  type: ClusterIP
  selector:
    app: kubia
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
